# saa-control-clt-simulations

./: .dockerignore  .gitignore  .zenodo.json  AUTHORS  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docker/: Dockerfile
docs/: ethanol_fermentation.md  fed_batch_reactor.md
results/ethanol_fermentation/controls-states/2026-07-14T18-23-45/: direct_controls_2026-07-14T18-23-45.csv  postprocessed_controls_2026-07-14T18-23-45.csv
results/ethanol_fermentation/coverage/2026-07-13T17-39-48/: coverage_plugin.json  coverage_plugin.tex  coverage_plugin.txt  coverage_plugin_intervals.json
results/ethanol_fermentation/coverage/2026-07-14T10-05-26/: coverage_plugin.json  coverage_plugin.tex  coverage_plugin.txt  coverage_plugin_intervals.json
scripts/: replot_inference.py
scripts/ethanol_fermentation/: clt.py  config.py  coverage.py  inference.py  model.py  nominal_saa.py  run_all.sh  run_clt.sh  run_coverage.sh  run_inference.sh  run_nominal_saa.sh
scripts/fed_batch_reactor/: clt.py  config.py  coverage.py  inference.py  model.py  nominal_saa.py  plot_coverage_intervals.py  run_all.sh  run_clt.sh  run_coverage.sh  run_inference.sh  run_nominal_saa.sh
src/saa_clt/: __init__.py  clt_plots.py  config.py  coverage_plotting.py  outputs.py  postprocess.py  warmstart.py
test/: _saa_helpers.py  conftest.py  test_clt_plots.py  test_clt_reference.py  test_coverage_intervals.py  test_coverage_plotting.py  test_driver_imports.py  test_imports_config.py  test_models.py  test_studies_smoke.py
(+53 files in other folders)
