[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saa-control-clt-simulations"
version = "0.1.0"
description = "Simulation code for statistical limit theorems for scenario-based optimal control under uncertainty (fed-batch reactor and ethanol fermentation examples)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Aurya Javeed" },
    { name = "Johannes Milz" },
]
keywords = [
    "optimal control under uncertainty",
    "sample average approximation",
    "central limit theorem",
    "confidence intervals",
    "batch process optimization",
]
# All dependencies are resolved from here (pip install .).  ensemblecontrol is
# NOT on PyPI; it is pinned to the exact Zenodo archive of release v0.0.4
# (DOI 10.5281/zenodo.21328270).
dependencies = [
    "matplotlib",
    "numpy>=1.25",
    "scipy",
    "casadi",
    "pandas[output-formatting]",
    "ensemblecontrol@https://zenodo.org/records/21328270/files/milzj/EnsembleControl-v.0.0.4.zip?download=1",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/milzj/saa-control-clt-simulations"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
